[metadata]
name = superreload
version = 0.0.1
author = Doug Rizeakos
author_email = rizeakad@gmail.com
description = Reload python modules and update old references
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dougrizeakos/superreload
project_urls =
    Bug Tracker = https://github.com/dougrizeakos/superreload/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 2.7

[options.packages.find]
exclude =
    tests
